--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </section>
 
     <footer class="py-12 text-center text-gray-400 text-sm">
-        <p>© 2026 Ming & Mei Wedding. All Rights Reserved.</p>
+        <p>© 2026 Ray & Tina Wedding. All Rights Reserved.</p>
     </footer>
 
     <script src="javaScript.js"></script>
