--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="info-card">
                 <div class="text-rose-800 text-4xl mb-4">📍</div>
                 <h3 class="text-xl font-bold mb-2">宴客地點</h3>
-                <p class="text-gray-600 font-medium">沙崙產業園區</p>
+                <p class="text-gray-600 font-medium">待通知</p>
 
 
             </div>
